add footnote support for redcarpet

--- a/index.haml
+++ b/index.haml
@@ -78,7 +78,8 @@
                 %label.checkbox 
                   %input{:type => "checkbox", :name => "redcarpet:underline"} Underline
               %td
-                &nbsp;
+                %label.checkbox 
+                  %input{:type => "checkbox", :name => "redcarpet:footnotes"} Footnotes
 
           %table#rdiscount
             %tr
