--- a/index.haml
+++ b/index.haml
@@ -45,41 +45,41 @@
             %tr
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:autolink"} Autolink
+                  %input{:type => "checkbox", :name => "redcarpet:autolink", :checked => true} Autolink
               %td
                 %label.checkbox 
                   %input{:type => "checkbox", :name => "redcarpet:disable_indented_code_blocks"} No Indented Code Blocks
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:fenced_code_blocks"} Fenced Code Blocks
+                  %input{:type => "checkbox", :name => "redcarpet:fenced_code_blocks", :checked => true} Fenced Code Blocks
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:highlight"} Highlight
+                  %input{:type => "checkbox", :name => "redcarpet:highlight", :checked => true} Highlight
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:lax_spacing"} Lax Spacing
+                  %input{:type => "checkbox", :name => "redcarpet:lax_spacing", :checked => true} Lax Spacing
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:no_intra_emphesis"} No Intra Emphesis
+                  %input{:type => "checkbox", :name => "redcarpet:no_intra_emphesis", :checked => true} No Intra Emphesis
             %tr
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:strikethrough"} Stikethrough
+                  %input{:type => "checkbox", :name => "redcarpet:strikethrough", :checked => true} Stikethrough
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:space_after_headers"} Space After Headers
+                  %input{:type => "checkbox", :name => "redcarpet:space_after_headers", :checked => true} Space After Headers
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:superscript"} Superscript
+                  %input{:type => "checkbox", :name => "redcarpet:superscript", :checked => true} Superscript
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:tables"} Tables
+                  %input{:type => "checkbox", :name => "redcarpet:tables", :checked => true} Tables
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:underline"} Underline
+                  %input{:type => "checkbox", :name => "redcarpet:underline", :checked => true} Underline
               %td
                 %label.checkbox 
-                  %input{:type => "checkbox", :name => "redcarpet:footnotes"} Footnotes
+                  %input{:type => "checkbox", :name => "redcarpet:footnotes", :checked => true} Footnotes
 
           %table#rdiscount
             %tr
